--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -1,4 +1,10 @@
 :root {
 	--white: hsl(0, 0%, 100%);
 	--black: hsl(0, 0%, 0%);
+	--strongcyan: hsl(171, 66%, 44%);
+	--lightblue: hsl(233, 100%, 69%);
+	--darkgrayishblue: hsl(210, 10%, 33%);
+	--grayishblue: hsl(201, 11%, 66%);
 }
+
+
