--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -1,12 +1,12 @@
 :root {
-	--white: hsl(0, 0%, 100%);
+	--bg-white: hslhsl(0,0%,94.9%);
 	--black: hsl(0, 0%, 0%);
 	--btn-cyan: hsl(171, 66%, 44%);
 	--btn-lightblue: hsl(233, 100%, 69%);
-	--background-gray:hsl(0,0%,59.2%);
+	--bg-gray:hsl(0,0%,59.2%);
 	--darkgrayishblue: hsl(210, 10%, 33%);
-	--pcol-grayishblue: hsl(201, 11%, 66%);
-	--hcol:hsl(210,9.5%,32.9%);
+	--p-grayishblue: hsl(201, 11%, 66%);
+	--h-col:hsl(210,9.5%,32.9%);
 }
 
 
