--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -1,5 +1,5 @@
 html {
-	font-size: 100%;
+	font-size: 62.8%;
 	box-sizing: border-box;
 }
 
@@ -12,5 +12,23 @@ html {
 body {
 	margin: 0;
 	padding: 0;
+	font-family:var(--font-baijamjuree);
+}
 
+
+p {
+	font-size: 1.6rem;
+	color:var(--p-grayishblue);
+}
+
+
+h1,h2,h3,li {
+	color:var(--h-col);
+}
+
+h1,
+h2,
+h3 {
+	//reset default adding from browsers
+	margin-top: 0;
 }
