--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -5,8 +5,13 @@
 	--btn-lightblue: hsl(233, 100%, 69%);
 	--bg-gray:hsl(0,0%,59.2%);
 	--darkgrayishblue: hsl(210, 10%, 33%);
-	--p-grayishblue: hsl(201, 11%, 66%);
-	--h-col:hsl(210,9.5%,32.9%);
-}
+	 --p-grayishblue: hsl(201, 11%, 66%);//9EABB2
+	 --hli-col:hsl(210,9.5%,32.9%); //4C545C
+	
+	}
+
+	
+	
+
 
 
