--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -1,34 +1,67 @@
 html {
-	font-size: 62.8%;
-	box-sizing: border-box;
+  /*Percentage of user's browser font-size setting*/ 
+    font-size: 62.5%;
+    box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-	box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
-	margin: 0;
-	padding: 0;
-	font-family:var(--font-baijamjuree);
+    margin: 0;
+    padding: 0;
+    font-family: var(--font-baijamjuree);
 }
 
 
 p {
-	font-size: 1.6rem;
-	color:var(--p-grayishblue);
+    font-size: 1.6rem;
+    color: var(--p-grayishblue);
 }
 
-
-h1,h2,h3,li {
-	color:var(--h-col);
-}
 
 h1,
 h2,
 h3 {
-	//reset default adding from browsers
-	margin-top: 0;
+    //reset browser's default adding margin 
+    margin-top: 0;
+	color: var(--h-col);
 }
+
+li {
+    color: var(--h-col);
+}
+
+*:focus {
+    outline: 3px dashed rgb(10, 8, 8);
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+    html:focus-within {
+      scroll-behavior: auto;
+    }
+  
+    *,
+    *::before,
+    *::after {
+      animation-duration: 0.01ms !important;
+      animation-iteration-count: 1 !important;
+      transition-duration: 0.01ms !important;
+      scroll-behavior: auto !important;
+    }
+  }
