--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -1,5 +1,6 @@
 :root {
-	--bg-white: hslhsl(0,0%,94.9%);
+	--white:hsl(0,0%,100%);
+	--bg-white: hsl(0,0%,94.9%);
 	--black: hsl(0, 0%, 0%);
 	--btn-cyan: hsl(171, 66%, 44%);
 	--btn-lightblue: hsl(233, 100%, 69%);
