--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -2,15 +2,15 @@
 	--white:hsl(0,0%,100%);
 	--bg-white: hsl(0,0%,94.9%);
 	--black: hsl(0, 0%, 0%);
-	--btn-cyan: hsl(171, 66%, 44%);
-	--btn-lightblue: hsl(233, 100%, 69%);
+	--btn-cyan: hsl(170.7,66.2%,44.1%);
+	--btn-lightblue: hsl(232.8,100%,69%);
 	--bg-gray:hsl(0,0%,59.2%);
 	--darkgrayishblue: hsl(210, 10%, 33%);
 	 --p-grayishblue: hsl(201, 11%, 66%);//9EABB2
 	 --hli-col:hsl(210,9.5%,32.9%); //4C545C
 	}
 	
-
+	
 	
 	
 
