--- a/app/scss/globals/buttons.scss
+++ b/app/scss/globals/buttons.scss
@@ -2,7 +2,24 @@ button {
     display: inline-block;
     font-size: 1.8rem;
     color: var(--white);
-    padding:1.3rem 8rem;
+    padding:1.15rem 8rem;
     line-height: 3rem;
-     letter-spacing: 0.5px;
+    width: 31.1rem;
+    border-radius: 30rem;
+    cursor: pointer;
+    border: 0;
+    font-weight: 400;
+}
+    
+
+.btn_cyan {
+    background-color: var(--btn-cyan);
+    border-bottom: 0.3rem solid #1d907f;
+    box-shadow: inset 0 8px 20px 0px rgb(38 186 164 / 40%)
+    
+}
+.btn_lightblue {
+    background-color: var(--btn-lightblue);
+    border-bottom: 3px solid #475dff;
+    box-shadow: 0 8px 20px rgb(97 115 255 / 40%);
 }
