--- a/app/scss/globals/buttons.scss
+++ b/app/scss/globals/buttons.scss
@@ -15,11 +15,21 @@ button {
 .btn_cyan {
     background-color: var(--btn-cyan);
     border-bottom: 0.3rem solid #1d907f;
-    box-shadow: inset 0 8px 20px 0px rgb(38 186 164 / 40%)
+    box-shadow: inset 0 8px 20px 0px rgb(38 186 164 / 40%);
+
+     &:hover {
+ 
+        filter: drop-shadow(0 0.4rem 0.4rem hsl(0,0%,25%));
+     }
     
 }
 .btn_lightblue {
     background-color: var(--btn-lightblue);
     border-bottom: 3px solid #475dff;
     box-shadow: 0 8px 20px rgb(97 115 255 / 40%);
+
+    &:hover {
+ 
+        filter: drop-shadow(0 0.4rem 0.4rem hsl(0,0%,25%));
+     }
 }
