--- a/app/scss/globals/buttons.scss
+++ b/app/scss/globals/buttons.scss
@@ -2,34 +2,30 @@ button {
     display: inline-block;
     font-size: 1.8rem;
     color: var(--white);
-    padding:1.15rem 8rem;
+    padding: 1.15rem 8rem;
     line-height: 3rem;
     width: 31.1rem;
     border-radius: 30rem;
     cursor: pointer;
     border: 0;
     font-weight: 400;
+
+    &:hover {
+        filter: drop-shadow(0 0.4rem 0.4rem hsla(0, 0%, 0%, 0.25));
+    }
 }
-    
+
 
 .btn_cyan {
     background-color: var(--btn-cyan);
     border-bottom: 0.3rem solid #1d907f;
     box-shadow: inset 0 8px 20px 0px rgb(38 186 164 / 40%);
-
-     &:hover {
- 
-        filter: drop-shadow(0 0.4rem 0.4rem hsl(0,0%,25%));
-     }
-    
 }
+
+
 .btn_lightblue {
     background-color: var(--btn-lightblue);
     border-bottom: 3px solid #475dff;
     box-shadow: 0 8px 20px rgb(97 115 255 / 40%);
-
-    &:hover {
- 
-        filter: drop-shadow(0 0.4rem 0.4rem hsl(0,0%,25%));
-     }
 }
+
