--- a/app/scss/components/buttons.scss
+++ b/app/scss/components/buttons.scss
@@ -10,6 +10,7 @@ button {
     border: 0;
     font-weight: 400;
     transition: all 0.5s;
+    margin-bottom: 2.4rem;
 
     &:hover {
         // filter: drop-shadow(0 0.4rem 0.4rem hsla(0, 0%, 0%, 0.25));
