--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -4,9 +4,30 @@
 .header {
     max-width: 143.9rem;
     border: 1px solid red;
-    
+
     &__hero {
+     text-align: center;
+     padding-top: 12.3rem;
 
     }
+        
+    &__hero-logo {
+        padding-left: 12.5rem;
+        padding-right: 12.5rem;
+    }
+        
+    &__text {
+        padding: 6.4rem 3.2rem 0 3.2rem; 
+    }
+ 
+
+    &__btns {
+        padding: 4.8rem 3.2rem 0 3.2rem; 
+    }
 }
+
+
+
+
+
  
