--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -2,12 +2,24 @@
 
 
 .header {
-    max-width: 143.9rem;
-    border: 1px solid red;
+    background-image: url("../../../images/bg-header-mobile.png");
+    background-size:cover;
+    
+    background-repeat: no-repeat;
+    background-position-x: -17.8rem;
+    background-position-y: 0;
+ 
+   @media screen and(min-width:523px) {
+       background-position-x: 1.8rem;
+     
+   }
 
     &__hero {
      text-align: center;
      padding-top: 12.3rem;
+     max-width: 143.9rem;
+     border: 1px solid red;
+
 
     }
         
@@ -17,7 +29,10 @@
     }
         
     &__text {
-        padding: 6.4rem 3.2rem 0 3.2rem; 
+        display: inline-block;
+        padding: 6.4rem 3.2rem 0 3.2rem;
+        max-width: 72rem; 
+        
     }
  
 
