--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -6,7 +6,7 @@
 	--btn-lightblue: hsl(232.8,100%,69%);
 	--bg-gray:hsl(0,0%,59.2%);
 	--darkgrayishblue: hsl(210, 10%, 33%);
-	 --p-grayishblue: hsl(201, 11%, 66%);//9EABB2
+	 --p-gray: hsl(201, 11%, 66%);//9EABB2
 	 --hli-col:hsl(210,9.5%,32.9%); //4C545C
 	}
 	
