--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -15,9 +15,10 @@
    }
 
     &__hero {
+        
      text-align: center;
      padding-top: 12.3rem;
-     max-width: 143.9rem;
+     max-width: 203.9rem;
      border: 1px solid red;
 
 
@@ -29,9 +30,12 @@
     }
         
     &__text {
-        display: inline-block;
+     
         padding: 6.4rem 3.2rem 0 3.2rem;
-        max-width: 72rem; 
+        width: 77rem;
+
+    }
+     
         
     }
  
@@ -39,7 +43,10 @@
     &__btns {
         padding: 4.8rem 3.2rem 0 3.2rem; 
     }
-}
+         
+
+        
+          
 
 
 
