--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -20,32 +20,50 @@ h3 {
       margin-top: 0;
 	  color: var(--h-col);
 	  
-	  letter-spacing: 0.075rem;
+	  letter-spacing: -0.075rem;
 }
 
 h1 {
-	// font-size: 3.2rem;
-	font-size: clamp(3rem, -4vw + 6rem, 4.5rem);
+	
+	 font-size: clamp(3.2rem, 4vw, 4.6rem);
+
 	font-weight: normal;
 	// letter-spacing: 0.005rem;
 
-	// max-width: 73rem;
+	 max-width: 73rem;
 
 }
 
 
 p {
+	
 	margin: 0;
-	// font-size: 1.6rem;
-	font-size:clamp(1.6rem, 1.5vw, 2rem);
 
+	 font-size:clamp(1.6rem, 1.5vw, 2rem);
+	
     color: var(--p-gray);
-	// line-height: 2.6rem;
+	line-height: 2.6rem;
 	letter-spacing: 0.03rem;
-	max-width: 60rem;	
-}
 
+	// @media screen and(min-width:550px) {
+	// html {
+	// 	font-size: 17px;
+	// }
+	}
+				
 li {
     color: var(--h-col);
 }
 	
+// @media screen and(max-width:33em) {
+
+// 	html {
+
+// 	  font-size: 46.5%;
+// 	}
+	
+// }
+
+
+
+
