--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -4,46 +4,59 @@
 .header {
     background-image: url("../../../images/bg-header-mobile.png");
     background-size:cover;
-    
     background-repeat: no-repeat;
     background-position-x: -17.8rem;
     background-position-y: 0;
+    max-width: 143.9rem;
  
-   @media screen and(min-width:523px) {
-       background-position-x: 1.8rem;
-     
-   }
+        @media screen and(min-width:523px) {
+            background-position-x: 1.8rem;
+            
+        }
 
     &__hero {
-        
+     display: grid;
+     justify-content: center;
      text-align: center;
      padding-top: 12.3rem;
-     max-width: 203.9rem;
      border: 1px solid red;
 
-
     }
-        
+    
+
+
     &__hero-logo {
         padding-left: 12.5rem;
         padding-right: 12.5rem;
     }
         
     &__text {
-     
         padding: 6.4rem 3.2rem 0 3.2rem;
-        width: 77rem;
-
-    }
-     
-        
-    }
+       
  
+        p {
+            // max-width: 71rem;
+text-align: center;
+             @media screen and(min-width:525px) {
+                max-width: 45rem;
+            }
+        }
 
+
+
+    }
+
+     
     &__btns {
         padding: 4.8rem 3.2rem 0 3.2rem; 
     }
-         
+        
+        
+    
+ 
+
+   
+}
 
         
           
