--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -10,21 +10,31 @@
     display: grid;
     justify-content: center;
     text-align: center;
-    max-width: 143.9rem;
+    width: 100%;
+
         @media screen and(min-width:523px) {
             background-position-x: 1.8rem;
             
         }
 
+        
+        @media screen and(min-width:800px) {
+            background-position-x: 0rem;
+            background-position-x: 3rem;
+            height: 36.3rem;
+            background-image: url("../../../images/bg-header-desktop.png");
+         
+        }
+
     &__hero {
      
-     
+        max-width: 150.9rem;
       
-     width: 100%;
+     
+     
   
      padding-top: 12.3rem;
-     border: 1px solid red;
-
+  
     }
     
     &__hero-logo {
@@ -34,10 +44,52 @@
         
     &__text {
         padding: 6.4rem 3.2rem 0 3.2rem;
-       
-        // max-width: 71rem;
-        width: clamp(31.3rem, 100%, 72rem); 
+    
+        max-width: 76rem;
+        // width: clamp(31.3rem, 100%, 72rem); 
+
+   
+        p {
+            // max-width: 80rem;
+            @media screen and(min-width:520px) {
+              padding-left:6rem;
+              padding-right:6rem;
+                
+            }
+
+            @media screen and(min-width:710px) {
+                padding-left:7rem;
+                padding-right:7rem;
+                letter-spacing: 0.015rem;
+                line-height: 3rem;
+                  
+              }
+
+              @media screen and(min-width:1200px) {
+                padding-left:0rem;
+                padding-right:0rem;
+                max-width: 73rem;
+                  
+              }
+
+        
+ 
+            }
+            @media screen and(min-width:1200px) {
+                padding-left:0rem;
+                padding-right:0rem;
+                // max-width: 73rem;
+                  
+              }
+
     }
+
+
+
+
+            
+ 
+              
 
          
     &__btns {
