--- a/app/scss/components/buttons.scss
+++ b/app/scss/components/buttons.scss
@@ -23,6 +23,7 @@ button {
 
 
 .btn_cyan {
+    margin-top: 4.8rem;
     background-color: var(--btn-cyan);
     border-bottom: 0.3rem solid #1d907f;
     box-shadow: inset 0 8px 20px 0px rgb(38 186 164 / 40%);
