--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -1,66 +1,54 @@
-@use '../util' as *;
+@use '../util'as *;
 
 h1,
 h2,
 h3 {
-	margin-top: 0;
-	
+    margin-top: 0;
 }
+
 
 a,
 a:visited,
 a:active {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 h1,
 h2,
 h3 {
     //reset browser's default adding margin 
-      margin-top: 0;
-	  color: var(--h-col);
-	  letter-spacing: -0.075rem;
+    margin-top: 0;
+    color: var(--hli-col);
+    letter-spacing: -0.075rem;
 }
-	  
+
 
 h1 {
-	
-	 font-size: clamp(3.2rem, 4vw, 4.6rem);
+    //  max-width: 73rem;
+    font-size: clamp(3.2rem, 4vw, 4.6rem);
+    font-weight: normal;
+    letter-spacing: -0.052rem;
 
-	font-weight: normal;
-	// letter-spacing: 0.005rem;
-
-	 max-width: 73rem;
-
+    @media screen and(min-width:900px) {
+        letter-spacing: -0.075rem;
+    }
 }
-
 
 p {
-	 margin: 0;
-	 font-size:clamp(1.6rem, 1.5vw, 2rem);
-	 color: var(--p-gray);
-	 line-height: 2.6rem;
-	 letter-spacing: 0.03rem;
+    margin: 0;
+    font-size: clamp(1.6rem, 1.5vw, 2rem);
+    color: var(--p-gray);
+    line-height: 2.6rem;
+    letter-spacing: 0.012rem;
 
-	// @media screen and(min-width:550px) {
-	// html {
-	// 	font-size: 17px;
-	// }
+		@media screen and(min-width:1200px) {
+			line-height: 3rem;
+			letter-spacing: 0.015rem;
+		}
+
 	}
-				
-li {
-    color: var(--h-col);
-}
-	
-// @media screen and(max-width:33em) {
 
-// 	html {
-
-// 	  font-size: 46.5%;
-// 	}
-	
-// }
-
-
-
+    li {
+        color: var(--hli-col);
+    }
 
