--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -61,9 +61,11 @@
     }
     
     &__btns {
-        @media screen and(min-width:780px) {
-           display: inline-block;
-        }
+        display: flex;
+        flex-direction: column;
+         @media screen and(min-width:800px) {
+            display: inline-block;
+         }
     }
 
         
