--- a/app/scss/components/info.scss
+++ b/app/scss/components/info.scss
@@ -3,7 +3,19 @@
 
     &__wrapper {
         display: grid;
+        grid-template-columns: 1fr;
+        place-items: center;
         padding: 0 3.2rem;
+        text-align: center;
+
+        img {
+            // width:calc(100% + 20px);
+            // width: 100%;
+            max-width: 75.2rem;
+            padding-top: 6.5rem ;
+            padding-bottom: 5.6rem;
+        }
+        
         
     }
 }
