--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -19,8 +19,8 @@ h3 {
     //reset browser's default adding margin 
     margin-top: 0;
     color: var(--hli-col);
-    letter-spacing: -0.075rem;
 }
+   
 
 
 h1 {
@@ -33,6 +33,32 @@ h1 {
         letter-spacing: -0.075rem;
     }
 }
+
+h2 {
+    font-size: clamp(2.8rem, 4vw, 3.6rem);
+    letter-spacing: -0.046rem;
+	font-weight: normal;
+	margin-bottom: 1.6rem;
+
+	@media screen and(min-width:900px) {
+        letter-spacing: -0.059rem;
+	}
+    
+}
+
+h3 {
+    font-size: 2.4rem;
+    letter-spacing: -0.039rem;
+	font-weight: normal;
+	margin-bottom: 0;
+	padding-bottom: 1rem;
+}
+
+
+    
+
+
+
 
 p {
     margin: 0;
