--- a/app/scss/components/info.scss
+++ b/app/scss/components/info.scss
@@ -8,14 +8,50 @@
         padding: 0 3.2rem;
         text-align: center;
 
+        
+
+
         img {
-            // width:calc(100% + 20px);
+            width: clamp(3.12rem, 100%, 75.2rem);
+            padding-top: clamp(6.5rem, 9vw, 8rem);
+            padding-bottom: clamp(5.6rem, 11%, 15rem);
             // width: 100%;
-            max-width: 75.2rem;
-            padding-top: 6.5rem ;
-            padding-bottom: 5.6rem;
+            // max-width: 75.2rem;
+            // padding-top: 6.5rem;
+
         }
-        
-        
+
+        @media screen and(min-width:823px) {
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: auto auto 1fr;
+
+            .info__h {
+           
+                grid-column: 1 / 4;
+                grid-row: 1 / 2;
+            }
+            .info__p {
+                grid-column: 1 / 4;
+                grid-row: 2 / 3;
+            }
+
+
+
+
+            .info__image {
+                grid-column: 1 / 3;
+                grid-row: 3 / 4;
+            }
+
+            .subgrid {
+                grid-column: 3 / 4;
+                grid-row: 2 / 4;
+            }
+
+
+
+        }
+
     }
+
 }
