--- a/app/scss/components/info.scss
+++ b/app/scss/components/info.scss
@@ -7,51 +7,63 @@
         place-items: center;
         padding: 0 3.2rem;
         text-align: center;
-
-        
+    width: 100%;
+    max-width: 124rem;
+   
+      
 
 
         img {
-            width: clamp(3.12rem, 100%, 75.2rem);
+            // width: clamp(3.12rem, 100%, 75.2rem);
             padding-top: clamp(6.5rem, 9vw, 8rem);
             padding-bottom: clamp(5.6rem, 11%, 15rem);
-            // width: 100%;
-            // max-width: 75.2rem;
+            width: 100%;
+            max-width: 75.2rem;
             // padding-top: 6.5rem;
+            @media screen and(min-width:823px) {
+                margin-left: -38rem;
 
+            }
         }
+
 
         @media screen and(min-width:823px) {
             grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: auto auto 1fr;
+            grid-template-rows: auto auto auto;
 
             .info__h {
-           
+
                 grid-column: 1 / 4;
                 grid-row: 1 / 2;
+                max-width: 73rem;
             }
+
             .info__p {
                 grid-column: 1 / 4;
                 grid-row: 2 / 3;
+                max-width: 73rem;
             }
 
-
-
-
             .info__image {
+            //    justify-self:self-start;
                 grid-column: 1 / 3;
                 grid-row: 3 / 4;
+                  
+              
+              
+               
             }
 
             .subgrid {
                 grid-column: 3 / 4;
                 grid-row: 2 / 4;
+                max-width: 35rem;
+                column-gap: 11rem;
             }
-
-
 
         }
 
     }
 
 }
+
