--- a/app/scss/components/info.scss
+++ b/app/scss/components/info.scss
@@ -7,18 +7,16 @@
         place-items: center;
         padding: 0 3.2rem;
         text-align: center;
-    width: 100%;
-    max-width: 124rem;
+        width: 100%;
+        max-width: 124rem;
    
       
-
-
         img {
             // width: clamp(3.12rem, 100%, 75.2rem);
             padding-top: clamp(6.5rem, 9vw, 8rem);
             padding-bottom: clamp(5.6rem, 11%, 15rem);
-            width: 100%;
-            max-width: 75.2rem;
+           
+            // max-width: 75.2rem;
             // padding-top: 6.5rem;
             @media screen and(min-width:823px) {
                 margin-left: -38rem;
@@ -48,10 +46,6 @@
             //    justify-self:self-start;
                 grid-column: 1 / 3;
                 grid-row: 3 / 4;
-                  
-              
-              
-               
             }
 
             .subgrid {
@@ -66,4 +60,8 @@
     }
 
 }
+                  
+              
+              
+               
 
