--- a/app/scss/components/info.scss
+++ b/app/scss/components/info.scss
@@ -1,6 +1,6 @@
 .info {
     margin-top: 16rem;
-
+    // position: relative;
     &__wrapper {
         display: grid;
         grid-template-columns: 1fr;
@@ -9,50 +9,64 @@
         text-align: center;
         width: 100%;
         max-width: 124rem;
-   
+       
       
+   
+
         img {
             // width: clamp(3.12rem, 100%, 75.2rem);
             padding-top: clamp(6.5rem, 9vw, 8rem);
             padding-bottom: clamp(5.6rem, 11%, 15rem);
+
+                @media screen and(min-width:823px) {
+                position:relative;
+                left:-23rem;
+                }
            
             // max-width: 75.2rem;
             // padding-top: 6.5rem;
-            @media screen and(min-width:823px) {
-                margin-left: -38rem;
+            // @media screen and(min-width:823px) {
+            //     margin-left: -38rem;
 
-            }
+            // }
         }
 
 
         @media screen and(min-width:823px) {
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: auto auto auto;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr auto;
+           
+        
+    
 
             .info__h {
 
-                grid-column: 1 / 4;
+                grid-column: 1 / 5;
                 grid-row: 1 / 2;
-                max-width: 73rem;
+                // max-width: 73rem;
+                width: 62.08%;
             }
 
             .info__p {
-                grid-column: 1 / 4;
+                grid-column: 1 / 5;
                 grid-row: 2 / 3;
-                max-width: 73rem;
+                // max-width: 73rem;
+                width: 62.08%;
             }
 
             .info__image {
-            //    justify-self:self-start;
-                grid-column: 1 / 3;
+            //    justify-self:self-end;
+                grid-column: 1 / 4;
                 grid-row: 3 / 4;
+               
+             
             }
 
             .subgrid {
-                grid-column: 3 / 4;
+                grid-column: 3 / 5;
                 grid-row: 2 / 4;
                 max-width: 35rem;
-                column-gap: 11rem;
+                text-align: left;
             }
 
         }
@@ -60,6 +74,8 @@
     }
 
 }
+               
+              
                   
               
               
