--- a/app/scss/globals/layout.scss
+++ b/app/scss/globals/layout.scss
@@ -6,4 +6,27 @@
 
 .pad_b-sm {
   padding-bottom: 4.8rem;
+  max-width: 50ch;
+  // text-align: left;
+
+
+  
+}
+
+
+.fnt-p {
+  font-size: clamp(1.6rem, 1.5vw, 1.8rem);
+}
+ 
+.fnt-p-sm {
+  font-size: 1.6rem;
+  letter-spacing: 0.012rem;
+  line-height: 2.6rem;
+// padding:initial 5.4rem; 
+
+
+  @media screen and(min-width:823px) {
+    line-height: 3rem;
+    text-align: left;
+  }
 }
