--- a/app/scss/components/clipboard.scss
+++ b/app/scss/components/clipboard.scss
@@ -1,11 +1,22 @@
 .clipboard {
     margin-top:18.6rem;
-
+    
+      @media screen and(min-width:823px) {
+        margin-top:5.7rem;
+      }
     &__acces {
         max-width: 95.6rem;
         text-align: center;
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
         padding-left:clamp(3.2rem, 5vw, 31.4rem); 
         padding-right:clamp(3.2rem, 5vw, 31.4rem);
+
+        p {
+            max-width: 76rem;
+        }
+   
         
     }
 
