--- a/app/scss/components/clipboard.scss
+++ b/app/scss/components/clipboard.scss
@@ -14,7 +14,17 @@
         padding-right:clamp(3.2rem, 5vw, 31.4rem);
 
         p {
-            max-width: 76rem;
+           max-width: 73rem;
+           padding-bottom: 11rem;
+           margin-left: auto;
+           margin-right: auto;
+        }
+
+        h2 {
+           max-width: 73rem;
+           text-align: center;
+           margin-left: auto;
+           margin-right: auto;
         }
    
         
