--- a/app/scss/components/clipboard.scss
+++ b/app/scss/components/clipboard.scss
@@ -10,6 +10,7 @@
         display: flex;
         flex-flow: column;
         justify-content: center;
+        align-items: center;
         padding-left:clamp(3.2rem, 5vw, 31.4rem); 
         padding-right:clamp(3.2rem, 5vw, 31.4rem);
 
@@ -25,6 +26,10 @@
            text-align: center;
            margin-left: auto;
            margin-right: auto;
+
+           @media screen and(min-width:823px) {
+                margin-bottom:1.9rem;
+           }
         }
    
         
