--- a/app/scss/components/blacklists.scss
+++ b/app/scss/components/blacklists.scss
@@ -22,7 +22,8 @@
         .wrapper-h {
             // margin-bottom: 1.1rem;
             margin-bottom: clamp(1.1rem, 2vw, 1.9rem);
-            font-size: 2.8rem;
+            font-size:clamp(2.6rem, 4vw, 3.6rem);
+
 
             @media screen and(min-width:800px) {
                 grid-column: 1 / 4;
@@ -59,19 +60,21 @@
             align-items: center;
             flex: 1;
             gap: 2rem;
-          
         }
+           
+          
 
         .p-sm {
             font-size: 1.6rem;
             letter-spacing: 0.0012rem;
             line-height: 2.6rem;
-            
-
+           
             @media screen and(min-width:1200px) {
                 line-height: 3rem;
             }
         }
+            
+
 
      
     }
