--- a/app/scss/components/blacklists.scss
+++ b/app/scss/components/blacklists.scss
@@ -10,7 +10,18 @@
         display: grid;
         grid-template-columns: 1fr;
         column-gap: 3rem;
+        justify-items: center;
+        // padding-left: 5.2rem;
+        // padding-right: 5.2rem;
 
+        p {
+            max-width: 40rem;
+            // margin: 0 auto;
+        }
+         
+        //  svg {
+        //      margin-bottom: 4.4rem;
+        //  }
 
         @media screen and(min-width:800px) {
             grid-template-columns: 1fr 1fr 1fr;
@@ -22,8 +33,8 @@
         .wrapper-h {
             // margin-bottom: 1.1rem;
             margin-bottom: clamp(1.1rem, 2vw, 1.9rem);
-            font-size:clamp(2.6rem, 4vw, 3.6rem);
-
+            font-size:clamp(2.6rem, 9vw, 3.6rem);
+           
 
             @media screen and(min-width:800px) {
                 grid-column: 1 / 4;
@@ -33,6 +44,7 @@
         .wrapper-p {
             margin-bottom: 9rem;
             font-size: 1.6rem;
+            
 
             @media screen and(min-width:800px) {
                 grid-column: 1 / 4;
@@ -58,16 +70,17 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-items: center;
             flex: 1;
             gap: 2rem;
+            
         }
-           
-          
 
         .p-sm {
             font-size: 1.6rem;
             letter-spacing: 0.0012rem;
             line-height: 2.6rem;
+          
            
             @media screen and(min-width:1200px) {
                 line-height: 3rem;
