--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -2,6 +2,7 @@ html {
   /*Percentage of user's browser font-size setting*/ 
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
    
     
