--- a/app/scss/components/blacklists.scss
+++ b/app/scss/components/blacklists.scss
@@ -24,8 +24,8 @@
         //  }
 
         @media screen and(min-width:800px) {
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: auto auto auto;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows:repeat(3, auto);
 
         }
 
