--- a/app/scss/components/cta.scss
+++ b/app/scss/components/cta.scss
@@ -1,20 +1,28 @@
 
 .cta {
   margin-bottom: 15rem;
+  padding-left: 3.2rem;
+  padding-right: 3.2rem;
      
      &__wrapp {
          max-width: 73rem;
          flex-flow: column;
          align-items: center;
-         justify-items: center;
+         text-align: center;
+        }
+
+
+        &_h {
+           margin-bottom: 1.9rem;
+                
+        }
+   
+          &__cta_p {
+              margin-bottom: 4.8rem;
+              max-width: 97%;
         }
 
 
 
-
-     &_h {
-        margin-bottom: 1.9rem;
-             
-       }
 
 }
