--- a/app/scss/components/footer.scss
+++ b/app/scss/components/footer.scss
@@ -1,54 +1,69 @@
-      
-  .footer {
+      .footer {
 
-      &__wrapp {
-          max-width: 111.1rem;
-          display: grid;
-          grid-template-columns: 1fr;
-          place-items: center;
-          text-align: center;
-          align-items: center;
-        
+          &__wrapp {
+              max-width: 111.1rem;
+              display: grid;
+              grid-template-columns: 1fr;
+              place-items: center;
+              text-align: center;
+              align-items: center;
 
-          img {
-              width:5.5rem;
-              margin-bottom: 4.5rem;
-              display: block;
+
+              .item-a {
+                grid-area: logo;
+              }
+              .item-b {
+                grid-area: nav;
+              }
+              .item-c {
+                grid-area: socials;
+              }
+
+ 
+              
+
+              
+
+              img {
+                width: 5.5rem;
+                margin-bottom: 4.5rem;
+                display: block;
+            }
+
+
+
           }
+
+
+          a {
+              font-size: 1.8rem;
+              color: var(--hli-col);
+
+          }
+
+
+          &__nav-list {
+              padding: 0;
+          }
+
+          .footer__nav-item {
+              margin-bottom: 2rem;
+
+          }
+
+
+          .footer__socials {
+              display: flex;
+              padding: 0;
+              gap: 4rem;
+              justify-content: space-between;
+          }
+
+
+
+
+
+
+
+
       }
-
-
-      a {
-        font-size: 1.8rem;
-        color:var(--hli-col);
-     
-    }
-  
-
-    &__nav-list {
-        padding: 0;
-    }
-    .footer__nav-item  {
-     margin-bottom: 2rem;
-   
-    }
-  
-    
-     .footer__socials {
-      display: flex;
-      padding: 0;
-      gap: 4rem;
-      justify-content: space-between;
-     }
-
-
-
-
-
-
-
-
-  }
-  
-  
-
