--- a/app/scss/components/footer.scss
+++ b/app/scss/components/footer.scss
@@ -1,4 +1,5 @@
       .footer {
+       
 
           &__wrapp {
               max-width: 111.1rem;
@@ -6,61 +7,79 @@
               grid-template-columns: 1fr;
               place-items: center;
               text-align: center;
-              align-items: center;
-
-
-              .item-a {
-                grid-area: logo;
-              }
-              .item-b {
-                grid-area: nav;
-              }
-              .item-c {
-                grid-area: socials;
-              }
-
- 
-            @media screen and (min-width:700px) {
-                grid-template-columns: repeat(6, 1fr);
-                grid-template-rows: auto;
-            }  
-
-
-
+             
+            
               img {
                 width: 5.5rem;
                 margin-bottom: 4.5rem;
                 display: block;
+              }
+
+              .item-a {
+                grid-area: logo;
+              }
+
+              .item-b {
+                grid-area: nav;
+                display: grid;
+                  grid-template-columns: subgrid;
+                  grid-template-rows: subgrid; 
+                  grid-column: 2 / 5;
+                  grid-row: 1 / 2;
+             
+              }
+              .subitem {
+                grid-column: 2 / 5;
+              }
+                
+              .item-c {
+                grid-area: socials;
+              }
+               
+              @media screen and (min-width:700px) {
+                  grid-template-columns: repeat(6, 1fr);
+                  grid-template-rows: auto;
+                
+                  .subitem  {
+                    display: flex;
+                  }
+                  grid-template-areas: 
+                  "logo nav nav nav  .  socials"
+                  "logo nav nav nav  .  socials"; 
+
+
+
+
+                }  
+
+
+              }
+                                       
+    
+            a {
+                font-size: 1.8rem;
+                color: var(--hli-col);
+              }
+  
+ 
+            &__nav-list {
+                padding: 0;
             }
-
-
-
+  
+            .footer__nav-item {
+                margin-bottom: 2rem;
+            }
+  
+            .footer__socials {
+                display: flex;
+                padding: 0;
+                gap: 4rem;
+                justify-content: space-between;
+            }
+  
           }
 
-
-          a {
-              font-size: 1.8rem;
-              color: var(--hli-col);
-
-          }
-
-
-          &__nav-list {
-              padding: 0;
-          }
-
-          .footer__nav-item {
-              margin-bottom: 2rem;
-
-          }
-
-
-          .footer__socials {
-              display: flex;
-              padding: 0;
-              gap: 4rem;
-              justify-content: space-between;
-          }
+      
 
 
 
@@ -69,4 +88,3 @@
 
 
 
-      }
