--- a/app/scss/components/footer.scss
+++ b/app/scss/components/footer.scss
@@ -1,13 +1,15 @@
       .footer {
-       
+
+
 
           &__wrapp {
-              max-width: 111.1rem;
+              max-width: 117.4rem;
               display: grid;
               grid-template-columns: 1fr;
               place-items: center;
               text-align: center;
-             
+                      padding-left: 3.2rem;
+         padding-right: 3.2rem;
             
               img {
                 width: 5.5rem;
@@ -15,34 +17,67 @@
                 display: block;
               }
 
-              .item-a {
-                grid-area: logo;
-              }
-
-              .item-b {
-                grid-area: nav;
-                display: grid;
-                  grid-template-columns: subgrid;
-                  grid-template-rows: subgrid; 
-                  grid-column: 2 / 5;
-                  grid-row: 1 / 2;
-             
-              }
-              .subitem {
-                grid-column: 2 / 5;
-              }
-                
-              .item-c {
-                grid-area: socials;
-              }
+            
                
               @media screen and (min-width:700px) {
                   grid-template-columns: repeat(6, 1fr);
                   grid-template-rows: auto;
+
+                  .item-a {
+                    grid-area: logo;
+                    justify-self: left;
+                  }
+    
+                  .item-b {
+                    grid-area: nav;
+                    display: grid;
+             
+              
+                 
+                  }
+                  .subitem {
+                    grid-column: 2 / 5;
+                  }
+                    
+                  .item-c {
+                    grid-area: socials;
+                  }
                 
                   .subitem  {
-                    display: flex;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr 1fr;
+                    grid-template-rows: 1fr;
+                    // grid-auto-rows: 1fr;
+                    column-gap:3rem;
+                    justify-items: left;
+
+                    .first {
+                      grid-column: 1 / 2;
+                      grid-row: 1 / 2;
+                    }
+                 
+                    .second {
+                      grid-column: 1 / 2;
+                      grid-row: 2 / 3;
+                    }
+                    
+                    .third {
+                      grid-column: 2 / 3;
+                      grid-row: 1 / 2;
+                    }
+                    
+                    .fourth {
+                      grid-column: 2 / 3;
+                      grid-row: 2 / 3;
+                    }
+                    
+                    .fifth {
+                      grid-column: 3 / 4;
+                      grid-row: 1 / 2;
+                    }
+                   
                   }
+
                   grid-template-areas: 
                   "logo nav nav nav  .  socials"
                   "logo nav nav nav  .  socials"; 
@@ -59,6 +94,11 @@
             a {
                 font-size: 1.8rem;
                 color: var(--hli-col);
+
+                &:hover {
+                  color:#26BBA4;
+                  
+                }
               }
   
  
@@ -74,7 +114,22 @@
                 display: flex;
                 padding: 0;
                 gap: 4rem;
-                justify-content: space-between;
+                // justify-content: space-between;
+                @media screen and (min-width:700px) {
+                gap:2.4rem;
+                justify-self: end;
+                  
+                i {
+                  width: 2.4rem;
+
+                  &:hover {
+                    color:#26BBA4;
+                    scale: 1.6;
+                    
+                  }
+                }
+                }
+
             }
   
           }
